# api/handler/auth.go
@@ -26,6 +26,7 @@ import (
 // @Failure      404  {object}  response.ErrorResp
 // @Failure      500  {object}  response.ErrorResp
 func (h *Handler) SignUp(c *gin.Context) {
+
 	var user models.CreateUser
 	err := c.ShouldBindJSON(&user)
 	if err != nil {
@@ -42,17 +43,13 @@ func (h *Handler) SignUp(c *gin.Context) {
 	}
 	user.Password = string(hashedPass)
 
+	resp, err := h.storage.User().CreateUser(c.Request.Context(), &user)
 	if err != nil {
-		id, err := h.storage.User().CreateUser(c.Request.Context(), &user)
-		if err != nil {
-			fmt.Println("error User Create:", err.Error())
-			c.JSON(http.StatusInternalServerError, "login or phone number is already used, enter another one")
-			return
-		}
-		c.JSON(http.StatusCreated, gin.H{"message": "created", "id": id})
+		fmt.Println("error User Create:", err.Error())
+		c.JSON(http.StatusInternalServerError, "username is already used, enter another one")
 		return
 	}
-	c.JSON(http.StatusBadGateway, gin.H{"error": "username is used, enter another one"})
+	c.JSON(http.StatusCreated, gin.H{"message": "created", "id": resp})
 }
 
 // loginUser godoc
@@ -98,6 +95,7 @@ func (h *Handler) Login(c *gin.Context) {
 
 	m := make(map[string]interface{})
 	m["username"] = resp.Username
+	m["user_id"] = resp.User_id
 
 	token, _ := helper.GenerateJWT(m, config.TokenExpireTime, config.JWTSecretKey)
 	c.JSON(http.StatusOK, models.LoginRespond{Token: token})
